--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
       <title>scientific calculator</title>
     </head>
    <body>
-    
+     <h1>Scientific calculator </h1>
    </body>
 
 </html>
