--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
                       <button type="button" class="btn btn-light">
                         (
                       </button>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light">
+                        )
+                       </button>                                                                                           </div>
                     </div>
                   </div>
                 </div>
