--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
                     aria-label=".form-control-lg example">
                   <div class="row">
                     <div class="col-3">
-                      <button type="button" class="btn btn-light">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
                         (
                       </button>
                       <div class="col-3">
-                        <button type="button" class="btn btn-light">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
                         )
                        </button>                                                                                           </div>
                     </div>
