--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,11 @@
                       <button type="button" class="btn btn-light w-100 mt-2 border">
                         (
                       </button>
+                    </div>
                       <div class="col-3">
                         <button type="button" class="btn btn-light w-100 mt-2 border">
                         )
-                       </button>                                                                                           </div>
+                       </button>
                     </div>
                   </div>
                 </div>
