--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                     class="form-control form-control-lg" 
                     type="text" 
                     aria-label=".form-control-lg example">
-                  <div class="row">
+                  <div class="row gx-1">
                     <div class="col-3">
                       <button type="button" class="btn btn-light w-100 mt-2 border">
                         (
@@ -27,7 +27,7 @@
                     </div>
                       <div class="col-3">
                         <button type="button" class="btn btn-light w-100 mt-2 border">
-                        )
+                        g
                        </button>
                     </div>
                   </div>
