--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,16 @@
                         )
                        </button>
                     </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        %
+                      </button>
+                    </div>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
+                        AC
+                       </button>
+                      </div>
                   </div>
                 </div>
               </div>
