--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,21 @@
      </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
+     <script>
+       document.addEventListener("DOMContentLoaded", function(){
+         // your Javascript code gestion here
+         const display = document.getElementById("calc-display ");
+         const buttons = document.getElementsByClassName("btn");
+
+         buttons.forEach(function() {
+           console.log('button clicked: ', button.innerText); 
+         });
+
+         buttons[0].addEventListener('click', function() {
+           console.log('first button click');
+       });
+     </script>
+
    </body>
 
 </html>
