--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
               <div class="card">
                 <div class="card-body">
                   <input 
-                    id="calc-display"
+                    id="calc-displays"
                     readonly 
                     class="form-control form-control-lg text-end" 
                     type="text" 
@@ -128,6 +128,51 @@
                         ÷
                        </button>
                       </div>
+
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        sin
+                      </button>
+                    </div>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
+                        ln
+                       </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        π
+                      </button>
+                    </div>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
+                        cos
+                       </button>
+                      </div>
+
+
+               <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        log
+                      </button>
+                    </div>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
+                        e
+                       </button>
+                    </div>
+                    <div class="col-3">
+                      <button type="button" class="btn btn-light w-100 mt-2 border">
+                        tan
+                      </button>
+                    </div>
+                      <div class="col-3">
+                        <button type="button" class="btn btn-light w-100 mt-2 border">
+                        √
+                       </button>
+                      </div>
+                    
+                    
                   </div>
                 </div>
               </div>
